--- a/projects/templates/projects/recommended_books.html
+++ b/projects/templates/projects/recommended_books.html
@@ -13,7 +13,21 @@
 <body>
     <div class="container">
         {% if books %}
+
             <h2 class="header">Recommended Books</h2>
+            <a href="{% url 'projects' %}" onclick="goBack()">Go Back</a>
+
+                <script>
+                function goBack() {
+                $.ajax({
+                    url: "{% url 'projects' %}",
+                    success: function(response) {
+                    $('#content').html(response);
+                    }
+                });
+                event.preventDefault(); 
+                }
+                </script>
             <div class="books-list">
                 {% for book in books %}
                     <div class="book">
