--- a/projects/templates/projects/book_detail.html
+++ b/projects/templates/projects/book_detail.html
@@ -1,14 +1,20 @@
 {% extends 'main.html' %}
-
-<!DOCTYPE html>
-<html>
+{% load static %}
+{% block content %}
 <head>
-    <title>{{ book.title }}</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'book-detail.css' %}">
 </head>
-<body>
-    <h1>{{ book.title }}</h1>
-    <p>Author: {{ book.author }}</p>
-    <p>Description: {{ book.description }}</p>
-    <!-- Other fields as needed -->
-</body>
-</html>
+<div class="page">
+    <div class="header">
+        <h2>{{ book.name }}</h2>
+    </div>
+    <div class="book">
+        <div class="title">
+            <h1>Title: {{ book.name }}</h1>
+        </div>
+        <p class="author">Author: {{ book.author }}</p>
+        <p class="description">Description: {{ book.description }}</p>
+        <!-- Other fields as needed -->
+    </div>
+</div>
+{% endblock %}
