--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -1,5 +1,6 @@
 <!-- index.html -->
-
+{% extends 'main.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +14,9 @@
 
     <!-- Display the form -->
     <h1>Welcome to BookAi</h1>
+    <div class="rectangle">
+        Your long text goes here. It will automatically wrap to the next line when it reaches the end of the rectangle's width. You can adjust the width of the rectangle by changing the width property in the CSS.
+    </div>
     <form id="myForm">
         {% csrf_token %}
 
@@ -69,3 +73,4 @@
 </script> -->
 </body>
 </html>
+{% endblock %}
