--- a/projects/templates/projects/book_detail.html
+++ b/projects/templates/projects/book_detail.html
@@ -58,6 +58,15 @@
         <button id="vote-down">Vote Down</button>
         <p id="vote-total">{{ book.vote_total }}</p>
         <p id="vote-ratio">{{ book.vote_ratio }}%</p>
+        <form method="POST">
+            {% csrf_token %}
+            <input type="text" name="comment_text">
+            <input type="submit" value="Post Comment">
+        </form>
+        {% for comment in book.comment_set.all %}
+        <p>{{ comment.comment_text }}</p>
+        {% endfor %}
+        
         <!-- Other fields as needed -->
     </div>
 </div>
