Devoloping the user login-register system

--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -17,6 +17,8 @@
     <div class="rectangle">
         Your long text goes here. It will automatically wrap to the next line when it reaches the end of the rectangle's width. You can adjust the width of the rectangle by changing the width property in the CSS.
     </div>
+    <a href="{% url 'login' %}">Login</a>
+
     <form id="myForm">
         {% csrf_token %}
 
