--- a/projects/templates/projects/book_detail.html
+++ b/projects/templates/projects/book_detail.html
@@ -18,7 +18,7 @@
         <p class="book-description">Description: {{ book.description }}</p>
         <!-- Voting form -->
         <div class="voting-section">
-            <form method="post" action="{% url 'vote'  %}">
+            <form id="vote-form" method="post" action="{% url 'vote' book.id  %}">
                 {% csrf_token %}
                 <button type="submit" name="vote" value="up" class="vote-button vote-up">Vote Up</button>
                 <button type="submit" name="vote" value="down" class="vote-button vote-down">Vote Down</button>
@@ -45,4 +45,63 @@
         </div>
     </div>
 </div>
+
+
+
+<script>
+    document.addEventListener("DOMContentLoaded", function(){
+    // Use vanilla JavaScript to attach the event if jQuery is not available
+    document.getElementById('vote-form').addEventListener('submit', function(e){
+        e.preventDefault(); // Prevent the form from submitting the traditional way
+
+        var form = this;
+        var actionUrl = form.getAttribute('action');
+
+        // Set up the AJAX request
+        var xhr = new XMLHttpRequest();
+        xhr.open('POST', actionUrl, true);
+        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+        xhr.setRequestHeader('X-CSRFToken', getCookie('csrftoken')); // Get the CSRF token
+
+        // Define what happens on successful data submission
+        xhr.onload = function () {
+            if (xhr.status >= 200 && xhr.status < 400) {
+                // Success!
+                var data = JSON.parse(xhr.responseText);
+                document.getElementById('vote-total').textContent = 'Votes: ' + data.vote_total;
+                document.getElementById('vote-ratio').textContent = 'Rating: ' + data.vote_ratio + '%';
+            } else {
+                // We reached our target server, but it returned an error
+                console.error('Server returned an error on the vote submission.');
+            }
+        };
+
+        // Define what happens in case of an error
+        xhr.onerror = function () {
+            console.error('An error occurred during the vote submission.');
+        };
+
+        // Set up the request data
+        var requestData = 'vote=' + form.querySelector('button[name="vote"]:focus').value;
+
+        // Finally, send the AJAX request with the data
+        xhr.send(requestData);
+    });
+
+    // Function to get the CSRF token
+    function getCookie(name) {
+        var cookieValue = null;
+        var cookies = document.cookie.split(';');
+        for(var i=0; i < cookies.length; i++) {
+            var cookie = cookies[i].trim();
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+        return cookieValue;
+    }
+});
+</script>
+
 {% endblock %}
