--- a/projects/templates/projects/recommended_books.html
+++ b/projects/templates/projects/recommended_books.html
@@ -29,6 +29,9 @@
                 event.preventDefault(); 
                 }
                 </script>
+            <!-- TODO: fix the layout -->
+            <div> {{ greeting_message }}</div>
+            <div> {{text_after_recommendations}}</div>
             <div class="books-list">
                 {% for book in books %}
                     <div class="book">
