--- a/projects/templates/projects/recommended_books.html
+++ b/projects/templates/projects/recommended_books.html
@@ -30,8 +30,7 @@
                 }
                 </script>
             <!-- TODO: fix the layout -->
-            <div> {{ greeting_message }}</div>
-            <div> {{text_after_recommendations}}</div>
+            
             <div class="books-list">
                 {% for book in books %}
                     <div class="book">
@@ -45,6 +44,7 @@
                         {% endif %}
 
                         <p class="author"><strong>Author:</strong> {{ book.author }}</p>
+                        <p class="explanation"><strong>Author:</strong> {{ book.explanation }}</p>
                         <p class="votes"><strong>Total Votes:</strong> {{ book.total_votes }}</p>
                         <p class="ratio"><strong>Vote Ratio:</strong> {{ book.vote_ratio }}</p>
                         <p class="published_year"><strong>Published Year:</strong> {{ book.published_year }}</p>
