--- a/projects/templates/projects/recommended_books.html
+++ b/projects/templates/projects/recommended_books.html
@@ -50,7 +50,7 @@
                         <p class="published_year"><strong>Published Year:</strong> {{ book.published_year }}</p>
                         <p class="description"><strong>Description:</strong> {{ book.description }}</p>
                         <a href="{% url 'book-detail' book.id %}">{{ book.name }}</a>
-                        <a href=""></a>
+                        <a href="Amazon link">{{ book.amazon_id }}</a>
 
                     </div>
                 {% endfor %}
