--- a/templates/main.html
+++ b/templates/main.html
@@ -28,7 +28,7 @@
                 <div class="links">
                     <a href="#">Home</a>
                     <a href="#">Log-in</a>
-                    <a href="#">Register</a>
+                    <a href="#">Registerr</a>
                 </div>
             </div>
             <div class="section2">
