--- a/templates/main.html
+++ b/templates/main.html
@@ -37,7 +37,7 @@
                         <h3>Links</h3>
                     </div>
                     <div class="links">
-                        <a href="#">Lorem.</a>
+                        <a href="#">Lorem</a>
                         <a href="#">Lorem.</a>
                         <a href="#">Lorem.</a>
                     </div>
