--- a/templates/main.html
+++ b/templates/main.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="links">
                     <a href="#">Home</a>
-                    <a href="#">Log-inn</a>
+                    <a href="#">Log-in</a>
                     <a href="#">Register</a>
                 </div>
             </div>
