--- a/templates/main.html
+++ b/templates/main.html
@@ -60,7 +60,7 @@
                     <a href="#"><i class="fa-brands fa-discord"></i></a>
                 </div>
                 <div class="about">
-                    <p>Lorem isum dolor sit amet consectetur adipisicing elit. Cupiditate ad exercitationem quo possimus accusamus explicabo aliquid distinctio quibusdam nemo delectus porro, quis vitae nostrum reiciendis architecto neque provident, corporis commodi.</p>
+                    <p>Lorem isum dolorr sit amet consectetur adipisicing elit. Cupiditate ad exercitationem quo possimus accusamus explicabo aliquid distinctio quibusdam nemo delectus porro, quis vitae nostrum reiciendis architecto neque provident, corporis commodi.</p>
                 </div>
             </div>
         </div>
