--- a/templates/main.html
+++ b/templates/main.html
@@ -28,7 +28,7 @@
                 <div class="links">
                     <a href="#">Home</a>
                     <a href="#">Log-in</a>
-                    <a href="#">Registeer</a>
+                    <a href="#">Register</a>
                 </div>
             </div>
             <div class="section2">
@@ -37,7 +37,7 @@
                         <h3>Links</h3>
                     </div>
                     <div class="links">
-                        <a href="#">Lorem</a>
+                        <a href="#">Lorem.</a>
                         <a href="#">Lorem.</a>
                         <a href="#">Lorem.</a>
                     </div>
@@ -60,7 +60,7 @@
                     <a href="#"><i class="fa-brands fa-discord"></i></a>
                 </div>
                 <div class="about">
-                    <p>Lorem isum dolorr sit amet consectetur adipisicing elit. Cupiditate ad exercitationem quo possimus accusamus explicabo aliquid distinctio quibusdam nemo delectus porro, quis vitae nostrum reiciendis architecto neque provident, corporis commodi.</p>
+                    <p>Lorem isum dolor sit amet consectetur adipisicing elit. Cupiditate ad exercitationem quo possimus accusamus explicabo aliquid distinctio quibusdam nemo delectus porro, quis vitae nostrum reiciendis architecto neque provident, corporis commodi.</p>
                 </div>
             </div>
         </div>
