--- a/templates/main.html
+++ b/templates/main.html
@@ -20,42 +20,52 @@
     {% endblock %}
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section about">
-                <h3>About BookAi</h3>
-                <p>BookAi is your personal library assistant, helping you find and manage your next great read.</p>
+        <div class="container">
+            <div class="section1">
+                <div class="logo">
+                    <img src="logo.jpg" alt="">
+                </div>
+                <div class="links">
+                    <a href="#">Home</a>
+                    <a href="#">Log-in</a>
+                    <a href="#">Register</a>
+                </div>
             </div>
-            <div class="footer-section links">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="{% url 'projects' %}">Home</a></li>
-                    <li><a href="{% url 'login' %}">Login</a></li>
-                    <li><a href="{% url 'register' %}">Register</a></li>
-
-                </ul>
+            <div class="section2">
+                <div class="box">
+                    <div class="heading">
+                        <h3>Links</h3>
+                    </div>
+                    <div class="links">
+                        <a href="#">Lorem.</a>
+                        <a href="#">Lorem.</a>
+                        <a href="#">Lorem.</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="heading">
+                        <h3>Links</h3>
+                    </div>
+                    <div class="links">
+                        <a href="#">Lorem.</a>
+                        <a href="#">Lorem.</a>
+                        <a href="#">Lorem.</a>
+                    </div>
+                </div>
             </div>
-            <div class="footer-content">
-    
-      
-              <div class="footer-section contact-info">
-                  <h3>Contact Us</h3>
-                  <ul>
-                      <li><strong>Email:</strong> <a href="mailto:info@bookai.com">info@bookai.com</a></li>
-                      <li><strong>Phone:</strong> <a href="tel:+123456789">+1 234 567 89</a></li>
-                      <li><strong>Address:</strong> 123 Library Lane, Booktown, BK 12345</li>
-                  </ul>
-              </div>
-            <div class="footer-section socials">
-                <h3>Follow us on social media</h3>
-                <a href="your_facebook_link">Facebook</a>
-                <a href="your_twitter_link">Twitter</a>
-                <a href="your_instagram_link">Instagram</a>
+            <div class="section3">
+                <div class="icons">
+                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-discord"></i></a>
+                </div>
+                <div class="about">
+                    <p>Lorem isum dolor sit amet consectetur adipisicing elit. Cupiditate ad exercitationem quo possimus accusamus explicabo aliquid distinctio quibusdam nemo delectus porro, quis vitae nostrum reiciendis architecto neque provident, corporis commodi.</p>
+                </div>
             </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 BookAi - All Rights Reserved</p>
         </div>
     </footer>
     
 </body>
 </html>
+
