add read button

--- a/projects/static/book-detail.css
+++ b/projects/static/book-detail.css
@@ -123,3 +123,26 @@
 .comment-body {
     margin-top: 5px;
 }
+
+
+.read-button {
+  background: #008cba;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 20px;
+  display: inline-block;
+  text-decoration: none;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.read-button:hover,
+.read-buttonn:focus {
+  background: #007ba7;
+  transform: scale(1.05);
+  outline: none;
+}
