--- a/templates/main.html
+++ b/templates/main.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="section1">
                 <div class="logo">
-                    <img src="logo.jpg" alt="">
+                    <img src="/static/imagies/logo.jpg" alt="">
                 </div>
                 <div class="links">
                     <a href="#">Home</a>
